--- a/static/style.css
+++ b/static/style.css
@@ -1,8 +1,8 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #e9f5f9;
-    margin: 0;
-    padding: 0;
+    background: linear-gradient(135deg, #1f1c2c, #928dab);
+    margin: 3%;
+    padding: 3%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -10,13 +10,12 @@ body {
 }
 
 .container {
-    background-color: #fff;
-    /* make container 20px from top */
+    background-color: rgba(255, 255, 255, 0.9);
     margin-top: 400px;
     margin-bottom: 100px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     display: flex;
     width: 90%;
     max-width: 1200px;
@@ -31,9 +30,11 @@ body {
     flex: 1;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: left;
     justify-content: flex-start;
-    padding-left: 20px;
+    margin-top: 5%;
+    padding-left: 5px;
+    width:50%;
 }
 
 .right-section img {
@@ -57,8 +58,16 @@ p {
 }
 
 .input-group {
+    margin-top: 20px;
     margin-bottom: 20px;
+    padding-left: 5px;
+    padding-top: 5px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
     text-align: left;
+    font-size: 20px;
+    background-color: rgba(255, 255, 255, 0.8);
+    transition: background-color 0.3s, border-color 0.3s;
 }
 
 .input-group label {
@@ -75,19 +84,25 @@ p {
     box-sizing: border-box;
 }
 
+.input-group input:focus {
+    background-color: #f4f4f4;
+    border-color: #007BFF;
+}
+
 button {
     padding: 10px 20px;
-    background-color: #007BFF;
+    background: linear-gradient(135deg, #007BFF, #00BFFF);
     color: #fff;
     border: none;
     border-radius: 4px;
     cursor: pointer;
     font-size: 16px;
     margin-top: 10px;
+    transition: background 0.3s;
 }
 
 button:hover {
-    background-color: #0056b3;
+    background: linear-gradient(135deg, #0056b3, #007BFF);
 }
 
 
@@ -115,35 +130,15 @@ button:hover {
     color: #333;
 }
 
-/* .output-json {
-    margin-bottom: 20px;
-}
-
-.output-json label {
-    display: block;
-    color: #555;
-}
-
-.output-json input {
-    width: 100%; 
-    height: 100%;
-    padding: 15px; 
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    background-color: #f4f4f4;
-    color: #333;
-    font-size: 16px; 
-} */
 
 .modal {
     display: none;
     position: fixed;
     z-index: 1;
     left: 0;
-    top: 0;
+    top: 10%;
     width: 100%;
-    height: 100%;
+    height: 90%;
     overflow: auto;
     background-color: rgb(0, 0, 0);
     background-color: rgba(0, 0, 0, 0.4);
@@ -161,6 +156,8 @@ button:hover {
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: left;
+    overflow: auto;  
+    max-height: 70vh;  
 }
 
 .close {
