--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
                     <label for="nodalDeformationZ">Nodal Deformation Z:</label>
                     <input type="text" id="nodalDeformationZ" readonly>
                 </div>
-                <div class="output-group">
+                <!-- <div class="output-group">
                     <label for="nodalFailure">Nodal Failure:</label>
                     <input type="text" id="nodalFailure" readonly>
                 </div>
@@ -56,16 +56,24 @@
                 <div class="output-group">
                     <label for="force">Force:</label>
                     <input type="text" id="force" readonly>
-                </div>
+                </div> -->
             </div>
         </div>
         <div class="right-section">
             <img src="../static/1.jpg" alt="Image 1">
             <img src="../static/2.jpg" alt="Image 2">
-            <!-- <div class="output-json">
-                <label for="jsonFile">Json File:</label>
-                <input type="text" id="jsonfile" readonly>
-            </div> -->
+            <div class="output-group">
+                <label for="nodalFailure">Nodal Failure:</label>
+                <input type="text" id="nodalFailure" readonly>
+            </div>
+            <div class="output-group">
+                <label for="displacement">Displacement:</label>
+                <input type="text" id="displacement" readonly>
+            </div>
+            <div class="output-group">
+                <label for="force">Force:</label>
+                <input type="text" id="force" readonly>
+            </div>
         </div>
     </div>
 
@@ -78,10 +86,93 @@
                     <label for="input4">Input 4:</label>
                     <input type="text" id="input4" name="input4">
                 </div>
-                <!-- Repeat for inputs 5 to 27 -->
                 <div class="input-group">
                     <label for="input5">Input 5:</label>
                     <input type="text" id="input5" name="input5">
+                </div>
+                <div class="input-group">
+                    <label for="input6">Input 6:</label>
+                    <input type="text" id="input6" name="input6">
+                </div>
+                <div class="input-group">
+                    <label for="input7">Input 7:</label>
+                    <input type="text" id="input7" name="input7">
+                </div>
+                <div class="input-group">
+                    <label for="input8">Input 8:</label>
+                    <input type="text" id="input8" name="input8">
+                </div>
+                <div class="input-group">
+                    <label for="input9">Input 9:</label>
+                    <input type="text" id="input9" name="input9">
+                </div>
+                <div class="input-group">
+                    <label for="input10">Input 10:</label>
+                    <input type="text" id="input10" name="input10">
+                </div>
+                <div class="input-group">
+                    <label for="input11">Input 11:</label>
+                    <input type="text" id="input11" name="input11">
+                </div>
+                <div class="input-group">
+                    <label for="input12">Input 12:</label>
+                    <input type="text" id="input12" name="input12">
+                </div>
+                <div class="input-group">
+                    <label for="input13">Input 13:</label>
+                    <input type="text" id="input13" name="input13">
+                </div>
+                <div class="input-group">
+                    <label for="input14">Input 14:</label>
+                    <input type="text" id="input14" name="input14">
+                </div>
+                <div class="input-group">
+                    <label for="input15">Input 15:</label>
+                    <input type="text" id="input15" name="input15">
+                </div>
+                <div class="input-group">
+                    <label for="input16">Input 16:</label>
+                    <input type="text" id="input16" name="input16">
+                </div>
+                <div class="input-group">
+                    <label for="input17">Input 17:</label>
+                    <input type="text" id="input17" name="input17">
+                </div>
+                <div class="input-group">
+                    <label for="input18">Input 18:</label>
+                    <input type="text" id="input18" name="input18">
+                </div>
+                <div class="input-group">
+                    <label for="input19">Input 19:</label>
+                    <input type="text" id="input19" name="input19">
+                </div>
+                <div class="input-group">
+                    <label for="input20">Input 20:</label>
+                    <input type="text" id="input20" name="input20">
+                </div>
+                <div class="input-group">
+                    <label for="input21">Input 21:</label>
+                    <input type="text" id="input21" name="input21">
+                </div>
+                <div class="input-group">
+                    <label for="input22">Input 22:</label>
+                    <input type="text" id="input22" name="input22">
+                </div>
+                <div class="input-group">
+                    <label for="input23">Input 23:</label>
+                    <input type="text" id="input23" name="input23">
+                </div>
+                <div class="input-group">
+                    <label for="input24">Input 24:</label>
+                    <input type="text" id="input24" name="input24">
+                </div>
+                <div class="input-group">
+                    <label for="input25">Input 25:</label>
+                    <input type="text" id="input25" name="input25">
+                </div>
+                <div class="input-group">
+                    <label for="input26">Input 26:</label>
+                    <input type="text" id="input26" name="input26">
                 </div>
                 <!-- Continue adding inputs up to input27 -->
                 <div class="input-group">
